// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
      value="1,8"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:7.07070707070707%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiDualRange__slider testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      tabindex="-1"
      type="range"
      value="1,8"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:100%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:100%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props inputs should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--min"
        max="8"
        min="1"
        name="name-minValue"
        style="width:4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiDualRange__slider testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      max="10"
      min="1"
      name="name"
      tabindex="-1"
      type="range"
      value="1,8"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
  </div>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        max="10"
        min="1"
        name="name-maxValue"
        style="width:4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <label
    class="euiRangeLabel euiRangeLabel--min"
  >
    1
  </label>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:100%"
      />
    </div>
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="width:606.060606060606%"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="width:1414.141414141414%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
      value="1,8"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:7.07070707070707%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasTicks euiDualRange__slider"
      max="100"
      min="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--hasTicks"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:100%"
      />
    </div>
    <div
      class="euiRangeTicks"
      style="margin:0 -8.403361344537815%;left:0;right:0"
    >
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        type="button"
        value="1"
      >
        1
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        type="button"
        value="21"
      >
        21
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        type="button"
        value="41"
      >
        41
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        type="button"
        value="61"
      >
        61
      </button>
      <button
        class="euiRangeTick"
        style="width:16.80672268907563%"
        tabindex="-1"
        type="button"
        value="81"
      >
        81
      </button>
    </div>
  </div>
</div>
`;
